layout + fixes + img
Création d'un système de layout
Ajout d'une image
fixes de trucs

--- a/book_shelf/public/css/base.css
+++ b/book_shelf/public/css/base.css
@@ -399,3 +399,11 @@ img{
     align-items: center;
     margin: auto;
 }
+.header_nav {
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-around;
+    align-items: center;
+    margin:0 1em 0 0;
+    padding: .15em;
+}
